# tiny-ecs

./: CMakeLists.txt  README.md
src/: main.cpp  tiny_ecs.h  tiny_ecs_ui.h
